# DooT2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/wads/micro_nomonsters/: micro_nomonsters_01.wad  micro_nomonsters_02.wad  micro_nomonsters_03.wad  micro_nomonsters_04.wad  micro_nomonsters_05.wad  micro_nomonsters_06.wad  micro_nomonsters_07.wad  micro_nomonsters_08.wad  micro_nomonsters_09.wad  micro_nomonsters_10.wad  micro_nomonsters_11.wad
cmake/: GitVersion.cmake
docs/: 030123-notes.md  170123-notes.md  240123-notes.md  doot2_structure_20220129.xml  experiment_config.md
ext/: CMakeLists.txt  libtorch_build_config.cmake
include/: ActionConverter.hpp  ActionManager.hpp  App.hpp  AutoEncoder.hpp  AutoEncoderModel.hpp  AutoEncoderModel2.hpp  Constants.hpp  DoorTraversalActionModule.hpp  DoubleBuffer.hpp  DoubleBuffer.inl  FlowDecoder.hpp  FourierFeatureModule.hpp  FrameDecoder.hpp  FrameDecoder2.hpp  FrameEncoder.hpp  GuiImageRelay.hpp  Heatmap.hpp  HeatmapActionModule.hpp  Image.hpp  Image.inl  LSTMApp.hpp  MathTypes.hpp  Model.hpp  ModelProto.hpp  ResNeXtModule.hpp  RewardModel.hpp  RewardModelTrainer.hpp  SequenceStorage.hpp  SingleBuffer.hpp  SingleBuffer.inl  TensorUtils.hpp  TimeSeries.hpp  TimeSeries.inl  Trainer.hpp  Utils.hpp
include/gui/: GameWindow.hpp  Gui.hpp  ImageRelay.hpp  ImagesWindow.hpp  PlotWindow.hpp  State.hpp  TrainingWindow.hpp  Window.hpp  WindowTypeUtils.hpp  Windows.hpp
include/ml/: Model.hpp  ModelTypeUtils.hpp  Models.hpp  MultiLevelImage.hpp  Trainer.hpp  TrainingInfo.hpp
include/ml/models/: ActorCriticModel.hpp  AutoEncoderModel.hpp  EncoderModel.hpp  MultiLevelAutoEncoderModel.hpp  RandomWalkerModel.hpp
include/ml/modules/: Actor.hpp  AdaptiveConv2d.hpp  AdaptiveConvTranspose2d.hpp  AdaptiveFourierConv2d.hpp  AdaptiveResNetConvBlock.hpp  AdaptiveResNetFourierConvBlock.hpp  AdaptiveSqueezeExcitation.hpp  Attention.hpp  Attention2D.hpp  Critic.hpp  Discriminator.hpp  EncodingDiscriminator.hpp  FlowDecoder.hpp  FourierConv2d.hpp  FrameDecoder.hpp  FrameEncoder.hpp  LinearResidualModule.hpp  MultiLevelDecoderModule.hpp  MultiLevelEncoderModule.hpp  MultiLevelFrameDecoder.hpp  MultiLevelFrameEncoder.hpp  ResNeXtModule.hpp  ResNetConvBlock.hpp  ResNetDownscaleConvBlock.hpp  ResNetFourierConvBlock.hpp  ResNetLinearBlock.hpp  SqueezeExcitation.hpp  TransformerBlock.hpp  ViTBlock.hpp
include/util/: DoubleBuffer.inl  ExperimentName.hpp  ExperimentUtils.hpp  Image.hpp  Image.inl  MathUtils.hpp  Sequence.hpp  SequenceCache.hpp  SequenceStorage.hpp  SequenceStorage.inl  SingleBuffer.inl  TensorUtils.hpp  TimeSeries.hpp  TimeSeries.inl  TypeCounter.hpp  Types.hpp
src/: ActionManager.cpp  App.cpp  AutoEncoder.cpp  AutoEncoderModel.cpp  AutoEncoderModel2.cpp  DoorTraversalActionModule.cpp  FlowDecoder.cpp  FourierFeatureModule.cpp  FrameDecoder.cpp  FrameDecoder2.cpp  FrameEncoder.cpp  GuiImageRelay.cpp  Heatmap.cpp  HeatmapActionModule.cpp  LSTMApp.cpp  Model.cpp  ModelProto.cpp  ResNeXtModule.cpp  RewardModel.cpp  RewardModelTrainer.cpp  SequenceStorage.cpp  TimeSeries.cpp  Trainer.cpp  main.cpp
src/gui/: GameWindow.cpp  Gui.cpp  ImageRelay.cpp  ImagesWindow.cpp  PlotWindow.cpp  TrainingWindow.cpp  Window.cpp
src/ml/: Model.cpp  Trainer.cpp
src/ml/models/: ActorCriticModel.cpp  AutoEncoderModel.cpp  EncoderModel.cpp  MultiLevelAutoEncoderModel.cpp  RandomWalkerModel.cpp
src/ml/modules/: Actor.cpp  AdaptiveConv2d.cpp  AdaptiveConvTranspose2d.cpp  AdaptiveFourierConv2d.cpp  AdaptiveResNetConvBlock.cpp  AdaptiveResNetFourierConvBlock.cpp  AdaptiveSqueezeExcitation.cpp  Attention.cpp  Attention2D.cpp  Critic.cpp  Discriminator.cpp  EncodingDiscriminator.cpp  FlowDecoder.cpp  FourierConv2d.cpp  FrameDecoder.cpp  FrameEncoder.cpp  LinearResidualModule.cpp  MultiLevelDecoderModule.cpp  MultiLevelEncoderModule.cpp  MultiLevelFrameDecoder.cpp  MultiLevelFrameEncoder.cpp  ResNeXtModule.cpp  ResNetConvBlock.cpp  ResNetDownscaleConvBlock.cpp  ResNetFourierConvBlock.cpp  ResNetLinearBlock.cpp  SqueezeExcitation.cpp  TransformerBlock.cpp  ViTBlock.cpp
src/tests/: TestSequence.cpp  TestSequenceStorage.cpp  TestTimeSeries.cpp
src/util/: ExperimentName.cpp  ExperimentUtils.cpp  Image.cpp  SequenceCache.cpp  SequenceStorage.cpp  TensorUtils.cpp  TimeSeries.cpp
